[gd_scene load_steps=14 format=3 uid="uid://csk7v3jwntq18"]

[ext_resource type="Script" path="res://src/stages/game/dyad_game/dyad_game.gd" id="1_rj5ni"]
[ext_resource type="Script" path="res://src/stages/game/dyad_game/states/dyad_state_machine.gd" id="2_hq41h"]
[ext_resource type="Script" path="res://src/stages/game/dyad_game/states/stopped_state.gd" id="3_q8i4y"]
[ext_resource type="Script" path="res://src/stages/game/dyad_game/states/prompt_state.gd" id="4_23ul0"]
[ext_resource type="AudioStream" uid="uid://73366si228xt" path="res://assets/sfx/sounds/answers/talk2.wav" id="5_aky61"]
[ext_resource type="Script" path="res://src/stages/game/dyad_game/states/right_state.gd" id="5_u1kn3"]
[ext_resource type="Script" path="res://src/stages/game/dyad_game/states/wrong_state.gd" id="6_t7b25"]
[ext_resource type="PackedScene" uid="uid://da7wxe2reu70r" path="res://src/stages/game/dyad_game/ui/prompt/prompt_ui.tscn" id="7_bxmv3"]
[ext_resource type="AudioStream" uid="uid://c4mclvkruucqv" path="res://assets/sfx/sounds/answers/have_this.wav" id="7_jskwk"]
[ext_resource type="PackedScene" uid="uid://7c4smtyjcn3m" path="res://src/stages/game/dyad_game/ui/player/player_ui.tscn" id="8_6rlia"]
[ext_resource type="AudioStream" uid="uid://bqbkaca3vtc3d" path="res://assets/sfx/sounds/answers/alarm_a.wav" id="9_d204i"]
[ext_resource type="PackedScene" uid="uid://dcgckpqoo0y3m" path="res://src/stages/game/dyad_game/point_stack.tscn" id="10_pi61h"]
[ext_resource type="Script" path="res://src/stages/game/dyad_game/states/intro_state.gd" id="10_yrwaf"]

[node name="DyadGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_rj5ni")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AI" type="Node" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("_timer")]
script = ExtResource("2_hq41h")
_timer = NodePath("../Timer")

[node name="StoppedState" type="Node" parent="StateMachine"]
script = ExtResource("3_q8i4y")

[node name="PromptState" type="Node" parent="StateMachine"]
script = ExtResource("4_23ul0")

[node name="PromptAudio" type="AudioStreamPlayer" parent="StateMachine/PromptState"]
stream = ExtResource("5_aky61")
volume_db = -10.0

[node name="RightState" type="Node" parent="StateMachine"]
script = ExtResource("5_u1kn3")

[node name="CorrectAudio" type="AudioStreamPlayer" parent="StateMachine/RightState"]
stream = ExtResource("7_jskwk")
volume_db = -10.0

[node name="WrongState" type="Node" parent="StateMachine"]
script = ExtResource("6_t7b25")

[node name="WrongAudio" type="AudioStreamPlayer" parent="StateMachine/WrongState"]
stream = ExtResource("9_d204i")
volume_db = -10.0

[node name="IntroState" type="Node" parent="StateMachine"]
script = ExtResource("10_yrwaf")

[node name="UI" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PromptUI" parent="UI/VBoxContainer/MarginContainer" instance=ExtResource("7_bxmv3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="PlayerUIs" type="HBoxContainer" parent="UI/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Player1" parent="UI/VBoxContainer/MarginContainer/PlayerUIs" instance=ExtResource("8_6rlia")]
layout_mode = 2

[node name="Player2" parent="UI/VBoxContainer/MarginContainer/PlayerUIs" instance=ExtResource("8_6rlia")]
layout_mode = 2

[node name="Control" type="Control" parent="UI/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PointStack" parent="UI/VBoxContainer/MarginContainer/Control" instance=ExtResource("10_pi61h")]
unique_name_in_owner = true
layout_mode = 1
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 80

[connection signal="ready_sequence" from="UI/VBoxContainer/MarginContainer/PlayerUIs/Player1" to="." method="_on_player_ready_sequence"]
[connection signal="ready_sequence" from="UI/VBoxContainer/MarginContainer/PlayerUIs/Player2" to="." method="_on_player_ready_sequence"]
